fix spacing error

--- a/style.css
+++ b/style.css
@@ -45,10 +45,14 @@ img {
 
 .hero_section {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   color: #000000;
   display: flex;
   flex-direction: column;
+}
+
+#vol_hero_section {
+  height: 100%;
 }
 
 header {
